Style the homepage. More stylings have been added to the homepage to better align and respond to changing window sizes. For extra small window sizes, smaller poster images will be shown to better fit them on phone screens. It should look better on mobiles now also by having an initial scale of 1. Issue #5

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,15 @@ body {
   background-color: #242424;
 }
 
+.center {
+  display: block;
+  margin: auto;
+}
+
+.home-page-tiles {
+  height: 308px;
+}
+
 #notice {
   color: green;
 }
@@ -12,4 +21,3 @@ body {
 #warning {
   color: red;
 }
-
